[tool.poetry]
name = "arbiter3"
version = "0.0.6"
description = ""
authors = ["Kai Forrest <kai.forrest@utah.edu>", "Jackson McKay <jay.mckay@utah.edu>", "Paul Fischer <p.fischer@utah.edu>"]
readme = "README.md"
packages = [
    { include = "arbiter3"}, 
]

[tool.poetry.scripts]
arbiter-init = "arbiter3.scripts.initialize:initialize_config"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
prometheus-api-client = "^0.5.3"
django = "^5.0.0"
aiohttp = "^3.9.1"
asyncio = "^3.4.3"
plotly = "^5.20.0"
kaleido = "0.2.1"
gunicorn = "^23.0.0"
jinja2 = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.6.0"
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
paramiko = "^3.4.0"
pytest-asyncio = "^0.23.2"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE="portal.settings"
python_files = "testing/**.py"
filterwarnings = ["ignore::pytest.PytestCacheWarning", "ignore::urllib3.exceptions.InsecureRequestWarning"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "[%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"